# czimagesort

./: .gitignore  README.md  pyproject.toml
src/czimagesort/: __init__.py  aux.py  categorysorter.py  conf.py  czbestof.py  czcategorise.py  czimagesort.py  preferencesorter.py
src/czimagesort/common/: __init__.py  utils.py
src/czimagesort/czbestof/: __init__.py  __main__.py  conf.py  preferencesorter.py
