# Copyright (C) 2025 - present  Alexander Czutro <github@czutro.ch>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# For more details, see the provided licence file or
# <http://www.gnu.org/licenses>.
#
################################################################### aczutro ###

[tool.poetry]
name = "czimagesort"
version = "1.0.0"
description = "Application to easily sort images into configurable categories."
authors = ["Alexander Czutro <github@czutro.ch>"]
homepage = "https://github.com/aczutro/czytget"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
czimagesort = "czimagesort:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

### aczutro ###################################################################
